# UppgiftA

./: CMakeLists.txt  Sorting.h  main.cpp  testning.txt
Testdata/: 1000(0,1000).txt  1000(0,10000).txt  1000(0,100000).txt  1000(0,10000000).txt  10000(0,1000).txt  10000(0,10000).txt  10000(0,100000).txt  10000(0,10000000).txt  100000(0,1000).txt  100000(0,100000).txt  100000(0,10000000).txt  50000(0,1000).txt  50000(0,10000).txt  50000(0,100000).txt  50000(0,10000000).txt
